<resources>

    <string name="app_name">My Check Ins</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>


    <string name="CheckIn_title">Enter Title</string>
    <string name="CheckIn_title_details">Enter Details</string>
    <string name="CheckIn_title_location">Enter Location</string>
    <string name="CheckIn_location">Location</string>
    <string name="CheckIn_map">Show Map Location</string>
    <string name="CheckIn_share">Share Check in</string>
    <string name="delete_crime">Delete</string>
    <string name="google_maps_key">AIzaSyDi830fZARY38kJOirt0hfpuV56Gs4q1Ic</string>
    <string name="help_button">Help</string>


    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="title_activity_maps">Map</string>

</resources>
