<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/crime_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                app:srcCompat="@android:color/darker_gray" />

            <ImageButton
                android:id="@+id/crime_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/CheckIn_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CheckIn_title" />

            <EditText
                android:id="@+id/CheckIn_title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CheckIn_title_details" />

            <EditText
                android:id="@+id/CheckIn_title_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CheckIn_title_location"/>
        </LinearLayout>




    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label" />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/CheckIn_location"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CheckIn_location"/>
    <Button
        android:id="@+id/CheckIn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CheckIn_share"/>

    <Button
        android:id="@+id/CheckIn_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CheckIn_map" />

</LinearLayout>